helmcharts/es-queries/dep-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapshot-query
  namespace: urbi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snapshot-query
  template:
    metadata:
      labels:
        app: snapshot-query
    spec:
      containers:
      - name: api
        image: registry.momrah.gov.sa/urbi-omar/snapshot-es-queries:v0.01
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: snapshot-query-svc
  namespace: urbi
spec:
  selector:
    app: snapshot-query
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: ClusterIP
