helmcharts/es-queries/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-snapshot-es-queries
  namespace: urbi
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-share-token"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  ingressClassName: urbi
  rules:
  - host: cityview.momah.gov.sa
    http:
      paths:
      - path: /esapi/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: snapshot-query-svc
            port:
              number: 80
  tls:
    - hosts:
        - cityview.momah.gov.sa
